--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,43 @@
 
 @custom-variant dark (&:is(.dark *));
 
-/* :root {
+@theme {
+  --color-primary: hsl(222.2, 47.4%, 11.2%);
+  --color-primary-foreground: hsl(210, 40%, 98%);
+
+  --color-green: hsl(145, 63%, 45%); /* green-500 */
+  --color-green-hover: hsl(142, 71%, 45%); /* green-600 */
+
+  --color-white: hsl(0, 0%, 100%);
+
+  --color-slate-100: hsl(210, 40%, 96%); /* slate-100*/
+  --color-slate-600: hsl(215, 28%, 34%); /* slate-600*/
+  --color-slate-800: hsl(215, 32%, 17%); /* slate-800*/
+  --color-slate-900: hsl(222, 47%, 11%); /* slate-900*/
+
+  --color-red-400: hsl(0, 90%, 71%); /* red-400 */
+  --color-link: hsl(211, 91%, 60%); /* blue-500 */
+  --color-link-hover: hsl(221, 79%, 48%); /* blue-700 */
+
+  --color-popover: hsl(0 0% 100%); /* white for light mode */
+  --color-popover-foreground: hsl(222.2 84% 4.9%); /* near-black */
+  --color-accent: hsl(210, 40%, 96.1%);
+  --color-accent-foreground: hsl(222.2, 47.4%, 11.2%);
+}
+
+.dark {
+  --color-primary: hsl(210, 40%, 98%);
+  --color-primary-foreground: hsl(222.2, 47.4%, 11.2%);
+
+  --color-green: hsl(142, 71%, 45%); /* green-600 */
+  --color-green-hover: hsl(145, 71%, 29%); /*green-700 */
+
+  --color-popover: hsl(222.2 84% 4.9%); /* dark bg */
+  --color-popover-foreground: hsl(210 40% 98%); /* light text */
+  --color-accent: hsl(217.2, 32.6%, 17.5%);
+  --color-accent-foreground: hsl(210, 40%, 98%);
+}
+:root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -17,45 +53,22 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+
+
+@media (prefers-color-scheme: light) {
+  :root {
+    color: #213547;
+    background-color: #ffffff;
+  }
 }
 
+/*
 body {
   margin: 0;
   display: flex;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
 }
 
 @media (prefers-color-scheme: light) {
