--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
 html {
   scrollbar-gutter: stable;
 }
+
 body {
   overflow-y: scroll;
 }
@@ -23,9 +24,8 @@ a.active {
 @theme {
   --color-primary: oklch(1 0 0); /* white */
   --color-primary-foreground: oklch(0.14 0.02 262); /* slate-900 */
-  --color-secondary: oklch(0.9855 0.004 264.5); /* slate-50 */
-  --color-slate100: oklch(0.95 0.011 245); /* slate-100 */
-  --color-green50: oklch(0.927 0.031 129.65); /* green-50 */
+
+  --color-secondary: oklch(0.927 0.031 129.65); /* green-50 */
   --color-secondary-foreground: oklch(0.19 0.02 263); /* slate-800 */
 
   --color-green: oklch(0.553 0.206 140.14); /* green-500 */
@@ -34,16 +34,9 @@ a.active {
   --color-border: oklch(0.85 0.04 262); /* slate-300 */
   --color-white: oklch(1 0 0); /* white */
 
-  --color-slate-100: oklch(0.95 0.011 245); /* slate-100 */
-  --color-slate-600: oklch(0.33 0.04 263); /* slate-600 */
-  --color-slate-800: oklch(0.19 0.02 263); /* slate-800 */
-  --color-slate-900: oklch(0.14 0.02 262); /* slate-900 */
-
-  --color-red-400: oklch(0.611 0.362 13.59); /* red-400 */
-
   --color-link: oklch(0.62 0.191 233); /* blue-500 */
   --color-link-hover: oklch(0.55 0.186 245); /* blue-700 */
-
+  
   /* Dropdown */
   --color-popover: oklch(1 0 0); /* white */
   --color-popover-foreground: oklch(0.04 0.039 262); /* slate 950 */
@@ -52,6 +45,16 @@ a.active {
 
   --color-ring: oklch(0.696 0.353 261.34); /* violet 300 */
   --color-destructive: oklch(0.704 0.191 22.216); /* orange-500 / amber-500 */
+
+
+  --color-slate50: oklch(0.9855 0.004 264.5); /* slate-50 */
+  --color-slate100: oklch(0.95 0.011 245); /* slate-100 */
+  --color-slate-600: oklch(0.33 0.04 263); /* slate-600 */
+  --color-slate-800: oklch(0.19 0.02 263); /* slate-800 */
+  --color-slate-900: oklch(0.14 0.02 262); /* slate-900 */
+
+  --color-red-400: oklch(0.611 0.362 13.59); /* red-400 */
+
 }
 
 @layer theme {
