steps section, tips

--- a/src/index.css
+++ b/src/index.css
@@ -17,15 +17,21 @@ a.active {
 }
 
 @keyframes glow {
-  0% { background-position: 0% 50%; }
-  100% { background-position: 100% 50%; }
+  0% {
+    background-position: 0% 50%;
+  }
+  100% {
+    background-position: 100% 50%;
+  }
 }
 
 @theme {
   --color-primary: oklch(1 0 0); /* white */
   --color-primary-foreground: oklch(0.14 0.02 262); /* slate-900 */
 
-  --color-secondary: oklch(0.927 0.031 129.65); /* green-50 */
+  --color-secondary: oklch(0.97 0 0); /* neutral 500 */
+  /*--color-secondary: oklch(0.927 0.031 129.65); /* green-50 */
+  --color-neutral: oklch(0.98 0.016 73.684); /* neutral-200 */
   --color-secondary-foreground: oklch(0.19 0.02 263); /* slate-800 */
 
   --color-green: oklch(0.553 0.206 140.14); /* green-500 */
@@ -36,7 +42,10 @@ a.active {
 
   --color-link: oklch(0.62 0.191 233); /* blue-500 */
   --color-link-hover: oklch(0.55 0.186 245); /* blue-700 */
-  
+  --color-nav: oklch(0.33 0.04 263);
+
+  --color-shadow: oklch(0.97 0.001 106.424); /* stone 100 */
+
   /* Dropdown */
   --color-popover: oklch(1 0 0); /* white */
   --color-popover-foreground: oklch(0.04 0.039 262); /* slate 950 */
@@ -46,7 +55,6 @@ a.active {
   --color-ring: oklch(0.696 0.353 261.34); /* violet 300 */
   --color-destructive: oklch(0.704 0.191 22.216); /* orange-500 / amber-500 */
 
-
   --color-slate50: oklch(0.9855 0.004 264.5); /* slate-50 */
   --color-slate100: oklch(0.95 0.011 245); /* slate-100 */
   --color-slate-600: oklch(0.33 0.04 263); /* slate-600 */
@@ -54,7 +62,6 @@ a.active {
   --color-slate-900: oklch(0.14 0.02 262); /* slate-900 */
 
   --color-red-400: oklch(0.611 0.362 13.59); /* red-400 */
-
 }
 
 @layer theme {
@@ -73,6 +80,9 @@ a.active {
 
     --color-link: oklch(0.7 0.21 233); /* blue-400 */
     --color-link-hover: oklch(0.68 0.2 245); /* blue-500 */
+    --color-nav: oklch(1 0 0);
+
+    --color-shadow: oklch(0.444 0.011 73.639); /* stone 600 */
 
     /* Dropdown */
     --color-popover: oklch(0.07 0.015 263); /* slate-950 */
@@ -82,5 +92,7 @@ a.active {
 
     --color-ring: oklch(0.551 0.027 264.364); /* indigo-300 */
     --destructive: oklch(0.704 0.191 22.216); /* orange-400 */
+
+    --color-red-400: oklch(0.611 0.362 13.59); /* red-400 */
   }
 }
